2009-11-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `SystemC' some more.
	
	* deploy/patches/sysc.patch: Also include patches to remove
	compiler warnings.

2009-11-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* deploy/versions.mk.defaults: Bump version numbers.

2009-11-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow build of MG Simulator with COMA.

	* deploy/rules/mgsim.mk: Point `configure' to the location of
	SystemC and tinyxml.

2009-11-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix deployment of `SystemC'.
	
	* deploy/patches/sysc.patch: Ensure that `libsystemc.a' is erased
	upon `make clean', to avoid objects being appended to it when
	re-running `make'.

2009-11-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix deployment of `tinyxml'.
	
	* deploy/tinyxml/Makefile.am: Also include `tinyxml.cpp' in build.

2009-11-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Revert previous (unneeded) changes.

	* deploy/rules/m4.mk: Revert "portability" fix since the
	gnulib/glibc breakage was merely due to a faulty gcc compiler.

2009-10-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* deploy/versions.mk.defaults: Bump version numbers. 

2009-11-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Increase portability.
	
	* deploy/rules/m4.mk: Replace "inline" with "attribute(weak)"
	using CPP during compilation of m4 to work around recent breakage
	of gnulib/glibc on RedHat linux.

2009-11-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Embed `SystemC' in the requirements tree.
	
	* deploy/versions.mk.defaults,	
	* deploy/Makefile: Also install a modified SystemC to the requirement
	tree.
	
	* deploy/sysc/systemc-2.1.v1.tgz,
	* deploy/sysc/do_diff.sh,
	* deploy/sysc/bootstrap,
	* deploy/rules/sc.mk,
	* deploy/patches/sysc.patch: New.
	
	* deploy/sysc/README: Document changes to SystemC.

2009-11-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Embed `tinyxml' in the requirements tree.
	
	* deploy/versions.mk.defaults,
	* deploy/rules/tx.mk,
	* deploy/tinyxml/configure.ac,